# uptime_bot

./: .gitignore  README.md  alembic.ini  pyproject.toml
migrations/versions/: 02947cde8dac_initial_tables.py  271d96c9bb21_initial_tables.py
src/: __main__.py
src/bot/: lexicon.py  states.py
src/bot/handlers/: __init__.py  monitor.py  user.py
src/bot/markups/: reply.py
src/bot/middlewares/: __init__.py  db_session.py  logging.py
src/core/: config.py  logger.py
src/infrastructure/database/: connector.py  manager.py
src/infrastructure/database/models/: __init__.py  base_model.py  monitor_model.py
src/infrastructure/database/repos/: __init__.py  monitors_repo.py
src/infrastructure/network/: client.py
src/infrastructure/scheduler/: tasks.py
